k8s/mainnet/deployment-main.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aledger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aledger-web-main-deployment
  namespace: aledger
spec:
  selector:
    matchLabels:
      app: aledger-web-main
  replicas: 1
  template:
    metadata:
      labels:
        app: aledger-web-main
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: aledger-web-main
          image: scholtz2/aledger-fe:1.2024.10.16-main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 5
            failureThreshold: 2
            terminationGracePeriodSeconds: 1
          volumeMounts:
            - name: aledger-main-conf
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: aledger-main-conf
          configMap:
            name: aledger-main-conf

---
apiVersion: v1
kind: Service
metadata:
  name: aledger-mainnet-service
  namespace: aledger
spec:
  type: ClusterIP
  selector:
    app: aledger-web-main
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aledger-web-main
  namespace: aledger
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - accounting.biatec.io
        - www.accounting.biatec.io
      secretName: tls-accounting.biatec.io
  rules:
    - host: accounting.biatec.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: aledger-mainnet-service
                port:
                  number: 8080
    - host: www.accounting.biatec.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: aledger-mainnet-service
                port:
                  number: 8080
